--- a/src/app/casino-games/casino-games.component.html
+++ b/src/app/casino-games/casino-games.component.html
@@ -82,7 +82,7 @@
 
 
         <div class="right-img-index3">
-            <img src="assets/white-label-casino-platform.jpg.webp" alt="">
+            <img src="assets/sirplay vrnl 11.webp" alt="">
 
         </div>
     </div>
@@ -95,7 +95,7 @@
 <section class="container10">
     <div class="index3-main-div">
         <div class="index3-left-img">
-            <img src="assets/Casino-software.jpg.webp" alt="">
+            <img class="container_10_img" src="assets/sirplay vrnl 25.webp" alt="">
         </div>
     
         <div class="index3-right-text">
