--- a/src/app/lottery-games/lottery-games.component.html
+++ b/src/app/lottery-games/lottery-games.component.html
@@ -78,7 +78,7 @@
 
 
         <div class="index4-right-img">
-            <img src="assets/bingo-and-lottery-white-label.jpg.webp" alt="">
+            <img class="lottery_images" src="assets/sirplay vrnl 20.webp" alt="">
 
         </div>
 
@@ -97,7 +97,7 @@
 <section class="container12">
 <div class="index4-main-div">
 <div class="index4-left-img">
-    <img src="assets/Casino-software.jpg.webp" alt="">
+    <img class="images_data" src="assets/sirplay vrnl 5_data.webp" alt="">
 </div>
 
 <div class="index4-right-text">
