--- a/src/app/online-casino-software/online-casino-software.component.html
+++ b/src/app/online-casino-software/online-casino-software.component.html
@@ -184,7 +184,7 @@
       </div>
 
       <div class="container4-col2">
-        <img src="assets/crypto-casino-games.png.webp" />
+        <img src="assets/sirplay vrnl 3.webp" />
 
 
       </div>
