--- a/src/app/sportbet/sportbet.component.css
+++ b/src/app/sportbet/sportbet.component.css
@@ -294,12 +294,12 @@ height: 93%;
 }
 .sportsbetting-crypto-sports-col1 img {
   width: 100%;
-  margin-left: 54%;
+  margin-left: 43%;
 }
 
 .sportsbetting-crypto-sports-col2 {
   width: 33%;
-  margin-left: 33%;
+  margin-left: 25%;
 }
 
 .sportsbetting-crypto-sports-col2 h2 {
@@ -2444,3 +2444,8 @@ width: 97%;
   background-color: currentColor;
 }
   /* mobile betting */
+
+  .phone_images{
+    width:320px ;
+    height:622px ;
+  }
