--- a/src/app/streaming/streaming.component.html
+++ b/src/app/streaming/streaming.component.html
@@ -31,7 +31,7 @@
       </div>
 
       <div class="index6-right-img">
-        <img src="assets/Streaming-platform-2-768x462.webp" alt="" />
+        <img class="sats_img" src="assets/sirplay vrnl 34.webp" alt="" />
       </div>
     </div>
   </section>
