--- a/src/app/whitecasino/whitecasino.component.css
+++ b/src/app/whitecasino/whitecasino.component.css
@@ -3099,6 +3099,7 @@ flex-direction: column;
 }
 .tv_image{
 width: 100%;
+height: auto;
 
 }
 .white_f_col{
@@ -3142,6 +3143,7 @@ whites_param {
   /* width: 331px;
     height: 172px; */
     width: 100%;
+    height: auto;
 }
 .white_sol_row{
   display: flex;
@@ -3197,4 +3199,15 @@ whites_param {
 .freq_question_col {
   padding: 8px;
 }
+.pay_images{
+  width: 100% !important;
+  height: auto !important;
+
+}
+}
+
+.pay_images{
+  width: 687px;
+  height: 410px;
+  border-radius: 5px;
 }
