--- a/src/app/whitecasino/whitecasino.component.html
+++ b/src/app/whitecasino/whitecasino.component.html
@@ -103,7 +103,7 @@
     <section class="white_sol_sec">
     <div class="white_labe_live_row">
         <div class="white_labe_live_col">
-            <img class="white_images_sec_sol" src="assets/white-label-live-casino.jpeg">
+            <img class="white_images_sec_sol" src="assets/sirplay vrnl 26_data.webp">
     
         </div>
         <div class="white_labe_live_col_1">
@@ -132,7 +132,7 @@
     <section class="play_sec">
     <div class="white_play_row">
         <div class="white_play_col">
-    <img class="pay_img_1" src="assets/Casino-payment-system.png">
+    <img class="pay_images" src="assets/sirplay vrnl 32_payment.webp">
         </div>
         <div class="white_play_col_2">
     <h1 class="white_play_h">Plug&Play Payment systems</h1>
