--- a/src/app/whitelabel/whitelabel.component.html
+++ b/src/app/whitelabel/whitelabel.component.html
@@ -31,8 +31,8 @@
       </div>
       <div class="label-img">
         <img
-          class="white_label_simg"
-          src="assets/white-label-sportsbook.png.webp"
+          class="white_label_imgs"
+          src="assets/sirplay vrnl 27.webp"
           alt="white-label-casino-platform.jpg.webp"
         />
       </div>
@@ -65,7 +65,7 @@
   <section class="custom-sec">
     <div class="cutom-main">
       <div class="custom-img">
-        <img src="assets/Customizations-platform.jpg.webp" alt="" />
+        <img class="custome_img" src="assets/sirplay vrnl 25.webp" alt="" />
       </div>
 
       <div class="head-custom">
