--- a/src/app/casino-tournament/casino-tournament.component.html
+++ b/src/app/casino-tournament/casino-tournament.component.html
@@ -37,7 +37,7 @@
 
 <section class="conatiner14">
     <div class="index5-leftimg">
-        <img src="assets/casino-tool-tournaments.webp" alt="">
+        <img class="tourna_images" src="assets/sirplay vrnl 3.webp" alt="">
 
     </div>
 
