--- a/src/app/esport/esport.component.html
+++ b/src/app/esport/esport.component.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="esports-betting-col2">
-<img src="assets/esports-betting-software-demo.png.webp" alt="">
+<img class="esport_img" src="assets/sirplay vrnl 21.webp" alt="">
         </div>
     </div>
 </section>
@@ -145,7 +145,7 @@
             </div>
         </div>
         <div class="esports-betting-middle-row2">
-<img src="assets/sports-betting-software-showcase.jpg.webp" alt="">
+<img class="all_images" src="assets/sirplay vrnl 11.webp" alt="">
         </div>
 
     </div>
