--- a/src/app/online-sportsbook/online-sportsbook.component.html
+++ b/src/app/online-sportsbook/online-sportsbook.component.html
@@ -40,7 +40,7 @@
     </div>
 
 <div class="sports_book_col_1">
-<img src="assets/sirplay sportbook 1.webp" width="410" height="504">
+<img class="kohli_images" src="assets/sirplay sportbook 1.webp" width="410" height="504">
 </div>
 
 </div>
@@ -89,7 +89,7 @@
     <li>We have singled up the best gaming providers with the aim of offering you the widest selection of live casino games and casino games available online.</li>
 </ul>
   <div class="web_3_igaming_img">
-    <img class="web_images_1" src="assets/web3iGamingplatform-1024x305.jpg.webp" title="Web3 plateform">
+    <img class="web_images" src="assets/sirplay web3.webp" title="Web3 plateform">
   </div>
 </div>
 
@@ -120,7 +120,7 @@
       
           <div class="crypto-section5-right">
           <h2>Play at the live casino as if you were directly inside the casino</h2>
-          <img class="live_sec5_img" src="assets/web3livecasino-768x312.jpg.webp" alt="">
+          <img class="live_sec5_imgs" src="assets/sirplay vrnl 19.webp" alt="">
           </div>
         </div>
       
@@ -131,7 +131,7 @@
         <div class="web3_page_row">
           <div class="web_page_col">
       <h1 class="web_3_header">Top online casino providers at World Class</h1>
-      <img class="web_3_images" src="assets/web3casino-768x640.jpg.webp">
+      <img class="web_3_imag" src="assets/sirplay online c.webp">
           </div>
           <div class="web_page_col_1">
            <h1 class="web3_header_2"> Online Casino</h1> 
@@ -163,7 +163,7 @@
       
           <div class="crypto-section6-right">
           <h2>Lottery and Bingo games online and retails</h2>
-          <img src="assets/crypto-bingo-providers-768x274.webp" alt="">
+          <img class="lottery_img" src="assets/sirplay vrnl 13.webp" alt="">
           </div>
         </div>
       </section>
