--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -378,3 +378,13 @@ cursor: pointer;
     width: 100%;
     color: #a0c528;
 }
+.menubar{
+  border: none !important;
+}
+.navbar-toggler{
+  border: none;
+}
+.navbar-toggler:hover{
+  background: none;
+  border: none;
+}
