--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -74,23 +74,23 @@
 
       <div class="company_about">
         <h4 class="comp_header">Company</h4>
-        <div><p class="comp_list">About Us</p></div>
-        <div><p class="comp_list">sportsbook Provider</p></div>
+        <div><p class="comp_list"><a href="/about-us" target="_blank">About Us</a></p></div>
+        <div><p class="comp_list"><a href="/online-sportsbook-software" target="_blank">sportsbook Provider</a></p></div>
         <!-- <div><p class="comp_list">News</p></div>
         <div><p class="comp_list">Certifications</p></div> -->
         <div>
           <a href="/chck.html"><p class="comp_list">Privacy Policy</p></a>
         </div>
-        <div><p class="comp_list">Contact Us</p></div>
+        <div><p class="comp_list"><a href="/contact" target="_blank">Contact Us</a></p></div>
       </div>
       <div class="company_about about_left">
         <h4 class="comp_header">Solutions</h4>
-        <div><p class="comp_list">Sports Betting software</p></div>
+        <div><p class="comp_list"><a href="/sports-betting-software" target="_blank">Sports Betting software</a></p></div>
         <!-- <div><p class="comp_list">Bitcoin Sportsbook</p></div> -->
         <!-- <div><p class="comp_list">Crypto casino</p></div> -->
-        <div><p class="comp_list">White Label Casino</p></div>
-        <div><p class="comp_list">White Label Betting Platform</p></div>
-        <div><p class="comp_list">Sportsbook iFrame</p></div>
+        <div><p class="comp_list"><a href="/casino" target="_blank">White Label Casino</a></p></div>
+        <div><p class="comp_list"><a href="/white-label-betting-platform" target="_blank">White Label Betting Platform</a></p></div>
+        <div><p class="comp_list"><a href="/sportsbook-iframe" target="_blank">Sportsbook iFrame</a></p></div>
       </div>
     </div>
   </section>
