--- a/src/app/i-frame/i-frame.component.css
+++ b/src/app/i-frame/i-frame.component.css
@@ -8,7 +8,9 @@
     height: 504px;
 }
 
-
+.button_slide {
+border-color: black;
+}
 @media screen and (max-width: 820px){
     .iframe_images{
         width: 100% !important;
