--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -188,7 +188,7 @@
       </div>
 
       <div class="sportsbetting-complete-sports-col2">
-        <img _ngcontent-wbf-c86="" src="assets/sirplay vrnl 22.webp" width="353" height="650" class="web3_img">
+        <img  src="assets/sirplay vrnl 22.webp" width="353" height="650" class="web3_img">
       </div>
     </div>
   </section>
@@ -286,7 +286,7 @@
           <strong> Bitcoin and Cryptocurrencies</strong><br />
           Our
           <a
-            href="https://sirplay.com/bitcoin-sportsbook/"
+            href="https://vrnl.com/bitcoin-sportsbook/"
             target="_blank"
             rel="noopener"
             >sports betting software solutions accepts all the
