--- a/src/app/contact-com/contact-com.component.html
+++ b/src/app/contact-com/contact-com.component.html
@@ -71,10 +71,10 @@
         
 
           <div class="btn" style="border: none;" >
-            <button class="con_btn"  type="submit" [disabled]="contactForm.invalid">Submit</button>
+            <button class="con_btn"  type="submit" [disabled]="contactForm.invalid" >Submit</button>
 
 
-            <!-- <span  class="wpcf7-spinner" *ngIf="loder"></span> -->
+            <span  class="wpcf7-spinner" *ngIf="loder"></span>
                   
           </div>
           <!-- <div class="wpcf7-response-output error" aria-hidden="true"  *ngIf="contactForm.invalid && (contactForm.touched || contactForm.dirty)">One or more fields have an error. Please check and try
