--- a/src/app/contact-component2/contact-component2.component.css
+++ b/src/app/contact-component2/contact-component2.component.css
@@ -14,7 +14,7 @@
     min-width: 1276px;
     min-height: 550px;
     display: flex;
-    z-index: 1000;
+    /* z-index: 1000; */
 
 }
 
@@ -23,7 +23,7 @@
     top: 39px;
     width: 329px;
     background: rgb(160,197,40);
-    z-index: 1;
+    /* z-index: 1; */
     padding: 40px;
     display: flex;
     justify-content: center;
