--- a/src/app/main-sec/main-sec.component.css
+++ b/src/app/main-sec/main-sec.component.css
@@ -546,7 +546,7 @@ padding-top: 80PX;
         margin-left: 16px;
         width:253px;
         height: 550px;
-        
+        margin-top: 40px;
 }
     }
   
