--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -266,27 +266,35 @@ cursor: pointer;
         background-color: #a0c528 !important;
         color: white;
         padding: 15px;
+        font-size: 13px;
+        font-family: Poppins;
     }
     .accordion-body {
       padding: var(--bs-accordion-body-padding-y) var(--bs-accordion-body-padding-x);
       background-color: #a0c528;
       color: white;
+      font-size: 13px;
+      font-family: Poppins;
     }
     
     .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
-      --bs-gutter-x: 0.5rem !important;
+      /* --bs-gutter-x: 2.5rem !important;
       --bs-gutter-y: 0;
       width: 100%;
       padding-right: calc(var(--bs-gutter-x) * .5);
       padding-left: calc(var(--bs-gutter-x) * .5);
       margin-right: auto;
-      margin-left: auto;
+      margin-left: auto; */
+      padding: 0;
+    }
+    .nav_col img{
+      margin: 30px 0 !important;
     }
     .navbar-collapse {
       flex-basis: 100%;
       flex-grow: 1;
       align-items: center;
-      margin-top: 12px !important;
+     
     }
     
     .accordion {
@@ -308,8 +316,8 @@ cursor: pointer;
       --bs-accordion-btn-active-icon: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%230c63e4'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e);
       --bs-accordion-btn-focus-border-color: #86b7fe;
       --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
-      --bs-accordion-body-padding-x: 1.25rem;
-      --bs-accordion-body-padding-y: 1rem;
+      --bs-accordion-body-padding-x: 1.9rem;
+      --bs-accordion-body-padding-y: .6rem;
       --bs-accordion-active-color: white;
       --bs-accordion-active-bg: #e7f1ff;
       /* background-color: white; */
@@ -334,7 +342,7 @@ cursor: pointer;
     .accord_btn{
       background: #a0c528;
       padding: 11px;
-      font-size: 17px;
+      font-size: 10px 15px;
       width: 100%;
       text-align: start;
       border: none;
@@ -350,14 +358,19 @@ cursor: pointer;
       .responsive{
         display: block;
         }
-    
+    nav{
+      border-bottom: 1px solid rgba(0,0,0, 0.1);
+      background: none !important;
+    }
     }
     .accordion-body a {
         color: white;
+     
     }
     .accord_btn a{
         color: white;
-       
+        font-size: 13px;
+        font-family: Poppins;
     }
     .act:hover{
       color: #A0C528 !important;
