--- a/src/app/sportbet/sportbet.component.css
+++ b/src/app/sportbet/sportbet.component.css
@@ -82,40 +82,7 @@ display: flex;
 justify-content: center;
 }
 
-.sportsbetting-section1-button button {
-  border-top-width: 2px;
-  border-right-width: 2px;
-  border-bottom-width: 2px;
-  border-left-width: 2px;
-  border-top-style: solid;
-  border-right-style: solid;
-  border-bottom-style: solid;
-  border-left-style: solid;
-  border-top-color: rgb(160, 197, 40);
-  border-right-color: rgb(160, 197, 40);
-  border-bottom-color: rgb(160, 197, 40);
-  border-left-color: rgb(160, 197, 40);
-  border-top-left-radius: 0.764em;
-  border-top-right-radius: 0.764em;
-  border-bottom-right-radius: 0.764em;
-  border-bottom-left-radius: 0.764em;
-  font-size: 1em;
-  background-color: white;
-  box-shadow: none;
-  padding-top: 0.75em;
-  padding-right: 1.5em;
-  padding-bottom: 0.75em;
-  padding-left: 1.5em;
-  font-size: 0.85em;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 1.2;
-  letter-spacing: 0.1em;
-  margin-right: calc(0.1em * -1);
-  text-align: center;
-  text-transform: uppercase;
-  color: rgb(87, 87, 86);
-}
+
 
 /* =============================================================== */
 
@@ -2444,3 +2411,40 @@ width: 97%;
   background-color: currentColor;
 }
   /* mobile betting */
+  .sportsbetting-section1-button button {
+    border-top-width: 2px;
+    border-right-width: 2px;
+    border-bottom-width: 2px;
+    border-left-width: 2px;
+    border-top-style: solid;
+    border-right-style: solid;
+    border-bottom-style: solid;
+    border-left-style: solid;
+    border-top-color: rgb(160, 197, 40);
+    border-right-color: rgb(160, 197, 40);
+    border-bottom-color: rgb(160, 197, 40);
+    border-left-color: rgb(160, 197, 40);
+    border-top-left-radius: 0.764em;
+    border-top-right-radius: 0.764em;
+    border-bottom-right-radius: 0.764em;
+    border-bottom-left-radius: 0.764em;
+    font-size: 1em;
+    background-color: white;
+    box-shadow: none;
+    padding-top: 1.55em;
+    padding-right: 1.5em;
+    padding-bottom: 1.55em;
+    padding-left: 1.5em;
+    font-size: 0.85em;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 0.2;
+    letter-spacing: 0.1em;
+    margin-right: calc(0.1em * -1);
+    text-align: center;
+    text-transform: uppercase;
+    color: rgb(87, 87, 86);
+    position: relative;
+    overflow: hidden;
+    
+  }
