--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -352,9 +352,9 @@
       <h3 class="faq_header_2">What is a sportsbook software?</h3>
       <p class="faq_para_2">
         A sportsbook software is a service which allows players to place bets
-        on the different sports available worldwide.
-      </p>
-      <p class="faq_para_1">
+        on the different sports available worldwide.<br>
+      
+  
         Vrnl sportsbook software offers 150,000 pre-match events with more
         than 80 categories, and up to 70,000 live events per month. Your users
         will appreciate the huge variety of odds and mixed bets.
@@ -379,13 +379,12 @@
       <h3 class="faq_header_2">What is a casino white label?</h3>
       <p class="faq_para_2">
         A casino white label solution is the perfect solution for the
-        operators who want to work with online casinos.
-      </p>
-      <p class="faq_para_2">
+        operators who want to work with online casinos.<br>
+    
+ 
         Thanks to its experience, Vrnl casino white label, will offer
-        certified and secure casino games.
-      </p>
-      <p class="faq_para_1">
+        certified and secure casino games.<br>
+    
         Vrnl Casino white label allows you to customize the casino based on
         your favourite language and currency.
       </p>
@@ -535,13 +534,13 @@
 
     <div class="ques_btn">
       <button class="hover-1 btn_s">
-        <i class="fa-solid fa-phone"></i> Contact us!
+        <i class="fa-solid fa-phone"></i><a href="/contact" style="color: rgba(255,255,255,0.99);"> Contact us!</a>
       </button>
     </div>
 
     <div class="sirplay_sec">
       <div class="sirplay_certificate">
-        <h1 class="sirplay_head">Vrnl is certified</h1>
+        <h2 class="sirplay_head">Vrnl is certified</h2>
         <p class="sirplay_para">
           Vrnl works to ensure our application complies with all the
           guidelines published by the different jurisdictions. Vrnl’s
@@ -551,7 +550,7 @@
           progress.
         </p>
 
-        <h1 class="sirplay_head">Our Partners</h1>
+        <h2 class="sirplay_head">Our Partners</h2>
         <p class="sirplay_para">
           Vrnl is constantly seeking the best gaming and entertainment
           partners in order to guarantee an exclusive gaming experience to
