--- a/src/app/main-sec/main-sec.component.css
+++ b/src/app/main-sec/main-sec.component.css
@@ -891,7 +891,7 @@ padding-top: 80px;
 }
 
 .faq_container{
-    padding-left: 82px;
+    padding-left: 200px;
     padding-right: 82px
 }
 
@@ -903,8 +903,8 @@ padding-top: 80px;
 .faq_header_2{
     font-weight: 600;
     color: #000;
-    font-size: 25px;
-    font-family: 'Poppins', sans-serif;
+    font-size: 19px;
+    font-family: 'Poppins'
 
 }
 .faq_para{
@@ -925,10 +925,10 @@ padding-top: 80px;
 
 }
 .faq_para_2{
-    font-size: 18px;
+    font-size: 16px;
     width: 95%;
     color: #000;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins';
 
 
 }
@@ -1057,6 +1057,36 @@ width: 50%;
     background-size: 100% 100%;
     color: white;
   }
+
+
+  .sirplay_certificate p{
+font-size: 16px;
+font-family:'Poppins';
+line-height: 30px;
+font-weight: 400;
+  }
+  .sirplay_certificate h2 {
+    /* font-family: Poppins; */
+    /* line-height: 28px; */
+    /* font-weight: 600; */
+    /* font-size: 28px; */
+}
+.faq_container ul{
+        padding-left: 30px;
+        font-size: 16px;
+        color: #686868;
+        line-height: 30px;
+        font-weight: 400;
+    
+}
+.faq_container p{
+font-family: Poppins;
+    line-height: 30px;
+    font-weight: 400;
+    color: #000;
+    font-size: 16px;
+}
+
 
   @media (max-width:820px){
     .sirplay_sec {
