--- a/src/app/online-casino-software/online-casino-software.component.html
+++ b/src/app/online-casino-software/online-casino-software.component.html
@@ -31,7 +31,7 @@
             >This is a theme and can be customized, see it in action:</em
           >
         </h3>
-        <a class="online-casino-link"><p>https://www.rex.games/casino/</p></a>
+        <a class="online-casino-link" href="https://babu365.com/" target="_blank"><p>https://babu365.com/</p></a>
 
         <br />
         <button class="online-casino-button">
