--- a/src/app/header3/header3.component.html
+++ b/src/app/header3/header3.component.html
@@ -140,8 +140,8 @@
     </nav>
 
     <div class="mobile-navbar-btn">
-      <ion-icon (click)="jquery()" name="menu-outline" class="mobile-nav-icon"></ion-icon>
-      <ion-icon (click)="jquery()" name="close-outline" class="mobile-nav-icon close_btn"></ion-icon>
+      <ion-icon (click)="jquery()" name="menu-outline" class=" fa-solid fa-bars  mobile-nav-icon"></ion-icon>
+      <ion-icon (click)="jquery()" name="close-outline" class="fa-solid fa-xmark  mobile-nav-icon close_btn"></ion-icon>
     </div>
   </header>
 
