--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -301,18 +301,21 @@
               <h2>Sports Betting Software FAQs</h2>
               <div class="wp-faq-schema-items ui-accordion ui-widget ui-helper-reset" role="tablist">
                 <h3
-                  class="ui-accordion-header ui-corner-top ui-state-default ui-accordion-header-active ui-state-active ui-accordion-icons"
-                  role="tab" id="ui-id-1" aria-controls="ui-id-2" aria-selected="true" aria-expanded="true"
-                  tabindex="0"><span class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-s"></span>Can I operate
-                  a sportsbook in any territory?</h3>
-                <div
-                  class="ui-accordion-content ui-corner-bottom ui-helper-reset ui-widget-content ui-accordion-content-active"
-                  style="" id="ui-id-2" aria-labelledby="ui-id-1" role="tabpanel" aria-hidden="false">
-                  <p>The sports betting market is regulated by the Countries, States or Provinces. Each territory has
-                    its own rules and Authorities, in some countries the sports betting is still not regulated or
-                    illegal. So, before starting building up a betting platform, it is important to get informed and
-                    apply for a license, whether needed.</p>
-                </div>
+  class="ui-accordion-header ui-corner-top ui-state-default ui-accordion-header-active ui-state-active ui-accordion-icons"
+  role="tab" id="ui-id-1" aria-controls="ui-id-2" [attr.aria-selected]="accordian" [attr.aria-expanded]="accordian"
+  tabindex="0">
+  <span (click)="toggleAccordion()" class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-s"></span>
+  Can I operate a sportsbook in any territory?
+</h3>
+<div [hidden]="!accordian"
+  class="ui-accordion-content ui-corner-bottom ui-helper-reset ui-widget-content ui-accordion-content-active"
+  style="" id="ui-id-2" aria-labelledby="ui-id-1" role="tabpanel" [attr.aria-hidden]="!accordian">
+  <p>
+    The sports betting market is regulated by the Countries, States or Provinces. Each territory has its own rules and
+    Authorities, in some countries the sports betting is still not regulated or illegal. So, before starting building
+    up a betting platform, it is important to get informed and apply for a license, whether needed.
+  </p>
+</div>
                 <h3
                   class="ui-accordion-header ui-corner-top ui-accordion-header-collapsed ui-corner-all ui-state-default ui-accordion-icons"
                   role="tab" id="ui-id-3" aria-controls="ui-id-4" aria-selected="false" aria-expanded="false"
