--- a/src/app/whitecasino/whitecasino.component.html
+++ b/src/app/whitecasino/whitecasino.component.html
@@ -12,7 +12,7 @@
     <p></p>
     <br>
     <p class="white_c_param">Before starting, see it in action:</p>
-    <p class="whitw_a"><a>https://www.rex.games/casino/</a></p>
+    <p class="whitw_a" ><a href="https://betwin123.live/" target="_blank" class="fontcolor">https://betwin123.live/</a></p>
         </div>
     
         <div class="white_casino_col_1">
