--- a/src/styles.css
+++ b/src/styles.css
@@ -2044,10 +2044,10 @@ cursor: pointer;
 }
 
 .online-casino-youtube img{
-    width: 161px;
-    height: 129px;
-    margin-top: -37px;
-    margin-left: 263px
+    width: 180px;
+    height: 140px;
+    margin-top: -70px;
+    margin-left: 250px;
 }
 
 
