--- a/src/app/sportbet/sportbet.component.html
+++ b/src/app/sportbet/sportbet.component.html
@@ -35,7 +35,7 @@
           <a href="https://www.sirplay.bet/">https://cricbuzzer.io/</a>
         </div>
 
-        <div class="sportsbetting-section1-button" (click)="scrollToContact()">
+        <div class="sportsbetting-section1-button">
           <button>Book a Demo</button>
         </div>
       </div>
@@ -303,5 +303,9 @@
     </div>
   </section>
 
- <app-contact-com id="contact"></app-contact-com>
+
+
+
+  
+ <app-contact-com></app-contact-com>
 <app-footer></app-footer>
