--- a/src/app/i-frame/i-frame.component.html
+++ b/src/app/i-frame/i-frame.component.html
@@ -25,6 +25,12 @@
 
   <section class="types_sports_sec">
     <div class="sports_type_row">
+      <div class="sports_col_1">
+        <img
+          class="types_images"
+          src="assets/sirplay vrnl 10.webp"
+        />
+      </div>
       <div class="sports_col">
         <h1 class="types_header">Types of sportsbook iframe</h1>
         <p class="type_para">
@@ -37,9 +43,7 @@
             and customizable layouts.
           </li>
           <li>
-            iFrame for Terminals and kiosks SSBT, the layout is studied to
-            adapt to touchscreen systems and the user experience is minimal to
-            allow inexperienced players to place bet
+            An iframe for mobile is designed to adapt to various mobile screen sizes and resolutions, ensuring that the embedded content is displayed correctly and efficiently. This mobile-responsive iframe offers a user-friendly experience on smartphones and tablets, accommodating the ever-growing population of mobile users.
           </li>
         </ul>
         <p>
@@ -51,16 +55,11 @@
 
         <div class="white_back"></div>
       </div>
-      <div class="sports_col_1">
-        <img
-          class="types_images"
-          src="assets/sirplay vrnl 10.webp"
-        />
-      </div>
+      
     </div>
   </section>
 
-  <section class="gaming_sec">
+  <!-- <section class="gaming_sec">
     <div class="gaming_row">
       <div class="gaming_col">
         <img
@@ -88,7 +87,7 @@
         <div class="white_back"></div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <section class="types_sports_sec">
     <div class="sports_type_row">
