--- a/src/app/whitelabel/whitelabel.component.css
+++ b/src/app/whitelabel/whitelabel.component.css
@@ -17,3 +17,24 @@ height: 375px;
             height: auto;  
         }
 }
+.label-bet{
+    width: 1500px;
+    justify-content: center;
+    margin: 0 auto;
+    padding: 80px 0;
+}
+@media (max-width: 1200px){
+.label-bet {
+    width: 1170px;
+}
+}
+@media (max-width: 992px){
+.label-bet {
+    width: 970px;
+}
+}
+@media (max-width: 768px){
+.label-bet {
+    width: 750px;
+}
+}
