--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -17,7 +17,7 @@
 
   <section class="about-section1-container">
     <div class="about-section1-main">
-      <h6 class="section-title  dark_title">Sirplay</h6>
+      <h6 class="section-title  dark_title">Vrnl</h6>
       <h1>Gaming solutions experts</h1>
 
       <div class="about_map">
