--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,8 +1,8 @@
 #animate-area { 
-    width: 100%; 
-    height: 400px; 
-    background-image: url(/assets/we-are-sirplay.jpg.webp);
-  background-size: cover ;
+  width: 100%; 
+  height: 400px; 
+  background-image: url(/assets/Untitled-4.png);
+background-size: cover ;
 }
 .home_header_h1{
   font-size: 60px;
@@ -79,3 +79,11 @@ p{
     width: 50%;
 }
 } */
+
+
+@media (max-width:820px){
+#animate-area{
+  height: 186px;
+}
+
+}
