--- a/src/app/header3/header3.component.css
+++ b/src/app/header3/header3.component.css
@@ -764,6 +764,7 @@ body {
   background-color: #fff;
   position: fixed;
   width: 100%;
+  z-index: 9999;
   /* box-shadow: 0em 0.19em 0.3em 0px hsla(0, 0%, 0%, 0.11); */
 }
 
@@ -893,7 +894,7 @@ transition-timing-function: cubic-bezier(0.400,0.000,0.200,1.000);
 #menu_2 {
   opacity: 0;
   position: absolute;
-  top: 156px;
+  top: 53px;
   visibility: hidden;
   margin-left: 40px;
   z-index: 1;
