--- a/src/app/whitelabel/whitelabel.component.html
+++ b/src/app/whitelabel/whitelabel.component.html
@@ -1,3 +1,4 @@
+
 <app-header></app-header>
 <section class="first-sec">
     <div class="first-head">
@@ -8,23 +9,25 @@
       </div>
     </div>
   </section>
-
+<div class="containt">
   <section class="white-label">
     <div class="label-bet">
       <div class="label-para">
         <p>
-          Vrnl’s <b> white label sportsbook solution</b> is a fully managed
-          certified sportsbook. <br />
+          Vrnl’s <b  class="bold"> white label sportsbook solution</b> is a fully managed
+          certified sportsbook. 
 
           <br />
+          </p>
+          <p>
           The uniqueness of this kind of solution is the
-          <b>fastness in creating and delivering </b> the website, indeed our
+          <b class="bold">fastness in creating and delivering </b> the website, indeed our
           staff can set up the website in ten working days according to
           customers’ requests and proceeding towards building a
-          <b>custom-tailored sportsbook website.</b> <br />
+          <b class="bold">custom-tailored sportsbook website.</b> <br /></p>
 
-          <br />
-          <b> We provide specialised hosting</b> , all required software and
+         <p>
+          <b class="bold"> We provide specialised hosting</b> , all required software and
           sports odds data feeds, risk management and customer support
           services.
         </p>
@@ -38,7 +41,7 @@
       </div>
     </div>
 
-    <div class="label-list">
+    <div class="label-list-para">
       <ul class="label-list1">
         <li>
           Creation of website, <b>branding, customisation</b>, and testing of
@@ -69,10 +72,10 @@
       </div>
 
       <div class="head-custom">
-        <h1>Customizations</h1>
-        <h2>Be unique</h2>
+        <h1 class="bottom-marg">Customizations</h1>
+        <h2 style="font-size: 34px;color: #000000;line-height: 34px;text-align: left">Be unique</h2>
         <p>
-          <b>Vrnl’s consultants will collect your requirements</b> and show
+          <b class="bold">Vrnl’s consultants will collect your requirements</b> and show
           you several templates and recent development works: all the
           platforms are multi language and multi currency, the UI will be
           customized around your needs. <br />
@@ -207,5 +210,5 @@
       </div>
     </div>
   </section>
-
+</div>
 <app-footer></app-footer>
