--- a/src/app/whitelabel/whitelabel.component.html
+++ b/src/app/whitelabel/whitelabel.component.html
@@ -9,7 +9,7 @@
       </div>
     </div>
   </section>
-<div class="containt">
+<div class="containt" >
   <section class="white-label">
     <div class="label-bet">
       <div class="label-para">
@@ -72,7 +72,7 @@
       </div>
 
       <div class="head-custom">
-        <h1 class="bottom-marg">Customizations</h1>
+        <h1 class="bottom-marg letter-spacing font-weight">Customizations</h1>
         <h2 style="font-size: 34px;color: #000000;line-height: 34px;text-align: left">Be unique</h2>
         <p>
           <b class="bold">Vrnl’s consultants will collect your requirements</b> and show
@@ -97,17 +97,17 @@
 
     <div class="plat-odd">
       <div class="plat-oddhead">
-        <h1>Odds</h1>
-        <h2>The engine of the platform</h2>
+        <h1 class="bottom-marg letter-spacing font-weight">Odds</h1>
+        <h2 style="font-size: 34px;color: #000000;line-height: 34px;text-align: left">The engine of the platform</h2>
         <p>
           We have already
-          <b>integrated the best odds providers in the world</b> and if that’s
+          <b class="bold">integrated the best odds providers in the world</b> and if that’s
           not enough for you we can also integrate your favorite one. <br />
 
           <br />
-          <b>Customise the odds format</b> in 5 different ways: European (<b
+          <b class="bold">Customise the odds format</b> in 5 different ways: European (<b class="bold"
             >decimal odds</b
-          >), UK (<b>fractional odds</b>) or American (<b>moneyline odds</b>),
+          >), UK (<b class="bold">fractional odds</b>) or American (<b class="bold">moneyline odds</b>),
           including Hong Kong, Indonesian and Malaysian odds format.
         </p>
         <div
@@ -138,10 +138,10 @@
         />
       </div>
       <div class="toolhead">
-        <h1>Marketing tools</h1>
-        <h2>Bonus and Promotions</h2>
+        <h1 class="bottom-marg letter-spacing font-weight">Marketing tools</h1>
+        <h2 style="font-size: 34px;color: #000000;line-height: 34px;text-align: left">Bonus and Promotions</h2>
         <p>
-          <b>The acquisition of new players is a key point</b>, Vrnl
+          <b class="bold">The acquisition of new players is a key point</b>, Vrnl
           provides various tools depending on the goal to be achieved. We have
           simplified the management of affiliations and our bonus engine
           allows you to be competitive in the market.
