--- a/src/app/whitelabel/whitelabel.component.css
+++ b/src/app/whitelabel/whitelabel.component.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 body {
     font-family: Poppins;
 }
@@ -30,6 +31,7 @@ body {
     width: 1233px;
     justify-content: center;
     margin: 0 auto;
+    font-family: Poppins !important;
     /* padding: 80px 0; */
 }
 @media (max-width: 1200px){
@@ -49,6 +51,7 @@ body {
 }
 .bold{
     font-weight: 900;
+    color: #000;
 }
 .label-list-para{
     justify-content: center;
@@ -92,4 +95,19 @@ h2 {
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     font-weight: bold;
+}
+.letter-spacing{
+    letter-spacing: 1px;
+}
+.custom-sec{
+    font-family: Poppins;
+}
+.plat-odd{
+    margin-top: 75px !important;
+    margin-left: -15px;
+    margin-right: -15px;
+}
+.font-weight{
+    font-weight: 600;
+    font-family: Poppins;
 }
